force-app/main/default/objects/Diagnostic_Trouble_Info__c/Diagnostic_Trouble_Info__c.object-meta.xml
<CustomObject>
    <label>Diagnostic Trouble Info</label>
    <nameField>
        <label>Diagnostic Trouble Info Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>