force-app/main/default/objects/Diagnostic_Trouble_Info__c/fields/Diagnostics_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics_Code__c</fullName>
    <label>Diagnostics Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>