force-app/main/default/objects/Diagnostic_Trouble_Info__c/fields/Diagnostics_Detailed_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics_Detailed_Sequence_No__c</fullName>
    <label>Diagnostics Detailed Sequence No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>