force-app/main/default/objects/Diagnostic_Trouble_Info__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>