force-app/main/default/objects/Diagnostic_Trouble_Info__c/fields/Fuel_Kind_Code__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Kind_Code__c</fullName>
    <label>Fuel Kind Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>