force-app/main/default/objects/Diagnostic_Trouble_Info__c/fields/Is_Activity_Diagnostics__c.field-meta.xml
<CustomField>
    <fullName>Is_Activity_Diagnostics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Activity Diagnostics</label>
    <type>Checkbox</type>
</CustomField>