force-app/main/default/objects/Diagnostic_Trouble_Info__c/fields/Occurrence_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Datetime__c</fullName>
    <label>Occurrence Datetime</label>
    <type>DateTime</type>
</CustomField>