force-app/main/default/objects/Diagnostic_Trouble_Info__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Diagnostic Trouble Info</relationshipLabel>
    <relationshipName>Diagnostic_Trouble_Info</relationshipName>
    <type>Lookup</type>
</CustomField>