force-app/main/default/objects/Diagnostic_Trouble_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Diagnostics_Code__c</columns>
    <columns>Diagnostics_Detailed_Sequence_No__c</columns>
    <columns>External_Key__c</columns>
    <columns>Fuel_Kind_Code__c</columns>
    <columns>Vehicle__c</columns>
    <columns>VIN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>